public/stylesheets/games/hockey/lobby.css
body h1 {
  margin: 15px 15px 30px 15px;
}

.wrapper {
  padding: 20px;
  max-width: 1000px;
  margin: auto;
}

.header {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 20px 60px;
  padding: 30px;
}

.title {
  font-size: 2.5em;
}

#myId {
  font-size: 1.3em;
  color: #999999;
}

.room-tab {
  background: #cfedda;
}

.room-tab span {
  display: inline-block;
  background: #4dbd74;
  padding: 2px 10px;
  color: #fff;
  font-size: 12px;
}

.room-title {
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.room-enter {
  min-width: 50px;
  text-align: right;
}

#room0 {
  display: none;
}

.room {
  display: flex;
  align-items: center;
  gap: 30px;
  height: 70px;
  padding: 0 30px;
  font-size: 1.4em;
  background-color: white;
  border-left: 3px solid #4dbd74;
  border-bottom: 1px solid #e4e5e6;
  transition: background-color .3s;
}

.room:hover {
  background-color: #dff1e6;
}

.control {
  text-align: right;
}

.btn-room-create {
  margin: 30px;
}

